--- a/Miyu/Feature/Profile/ProfileViewController.storyboard
+++ b/Miyu/Feature/Profile/ProfileViewController.storyboard
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cn7-xV-1xf">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,11 +16,11 @@
             <objects>
                 <viewController storyboardIdentifier="ProfileViewController" id="cn7-xV-1xf" customClass="ProfileViewController" customModule="Miyu" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="yTZ-vK-8PS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="random_1" translatesAutoresizingMaskIntoConstraints="NO" id="gYY-IN-Pyz">
-                                <rect key="frame" x="24" y="79" width="80" height="80"/>
+                                <rect key="frame" x="24" y="30" width="80" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="gYY-IN-Pyz" secondAttribute="height" multiplier="1:1" id="68D-hC-1Eh"/>
                                     <constraint firstAttribute="width" secondItem="gYY-IN-Pyz" secondAttribute="height" multiplier="1:1" id="Z7f-xO-zve"/>
@@ -24,45 +28,26 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Leslie Pound" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ysu-1C-l4w">
-                                <rect key="frame" x="112" y="79" width="153" height="33.5"/>
+                                <rect key="frame" x="112" y="30" width="153" height="33.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.67" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FxI-Gj-5WZ">
-                                <rect key="frame" x="112" y="112.5" width="64" height="37"/>
+                                <rect key="frame" x="112" y="63.5" width="64" height="37"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="31"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="88E-Nh-ZaN">
-                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
-                                <items>
-                                    <navigationItem title="YOU" id="sB4-eh-4SS">
-                                        <barButtonItem key="leftBarButtonItem" title="Item" image="xbutton" style="plain" id="MQQ-AA-gow">
-                                            <color key="tintColor" red="0.94025671466844218" green="1" blue="0.9448438884978938" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                            <connections>
-                                                <action selector="dismissButtonTapped:" destination="cn7-xV-1xf" id="Zta-Tl-X9f"/>
-                                            </connections>
-                                        </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" title="Item" image="addFriend" id="pcQ-lT-M51">
-                                            <color key="tintColor" red="1" green="0.98844299201818919" blue="0.98122823458828168" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                            <connections>
-                                                <action selector="addFriendButtonTapped:" destination="cn7-xV-1xf" id="aWz-eD-Gzf"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Du-eo-mVx" customClass="ProfileMenuBar" customModule="Miyu" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="169" width="600" height="35"/>
+                                <rect key="frame" x="0.0" y="120" width="375" height="35"/>
                                 <color key="backgroundColor" red="1" green="0.83001911610000001" blue="0.53398158809999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="nCw-ER-fsB"/>
                                 </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="hKc-OQ-HNz">
-                                <rect key="frame" x="0.0" y="204" width="600" height="396"/>
+                                <rect key="frame" x="0.0" y="155" width="375" height="512"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="tSr-B4-7y4">
                                     <size key="itemSize" width="50" height="50"/>
@@ -82,7 +67,7 @@
                                 </cells>
                             </collectionView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Currently working at hoodwinked" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ftQ-qX-Yab">
-                                <rect key="frame" x="112" y="149.5" width="159.5" height="12"/>
+                                <rect key="frame" x="112" y="100.5" width="159.5" height="12"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -91,18 +76,15 @@
                         <color key="backgroundColor" red="0.65783615766672476" green="0.80708347516507262" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="PxE-bb-h4c" firstAttribute="trailing" secondItem="0Du-eo-mVx" secondAttribute="trailing" id="0cu-tt-vwU"/>
-                            <constraint firstItem="gYY-IN-Pyz" firstAttribute="top" secondItem="88E-Nh-ZaN" secondAttribute="bottom" constant="15" id="1SJ-yT-2v3"/>
+                            <constraint firstItem="gYY-IN-Pyz" firstAttribute="top" secondItem="PxE-bb-h4c" secondAttribute="top" constant="10" id="5sx-hI-8rG"/>
                             <constraint firstItem="Ysu-1C-l4w" firstAttribute="leading" secondItem="gYY-IN-Pyz" secondAttribute="trailing" constant="8" id="7He-vI-AXM"/>
                             <constraint firstItem="gYY-IN-Pyz" firstAttribute="leading" secondItem="PxE-bb-h4c" secondAttribute="leading" constant="24" id="A9P-x1-hig"/>
                             <constraint firstItem="hKc-OQ-HNz" firstAttribute="top" secondItem="0Du-eo-mVx" secondAttribute="bottom" id="FR4-J1-ByV"/>
                             <constraint firstItem="FxI-Gj-5WZ" firstAttribute="leading" secondItem="Ysu-1C-l4w" secondAttribute="leading" id="GGb-ts-2fn"/>
-                            <constraint firstItem="88E-Nh-ZaN" firstAttribute="leading" secondItem="PxE-bb-h4c" secondAttribute="leading" id="Gq4-Hv-EXH"/>
-                            <constraint firstItem="PxE-bb-h4c" firstAttribute="trailing" secondItem="88E-Nh-ZaN" secondAttribute="trailing" id="VAF-Dk-Nlz"/>
-                            <constraint firstItem="Ysu-1C-l4w" firstAttribute="top" secondItem="88E-Nh-ZaN" secondAttribute="bottom" constant="15" id="bAj-Y1-FDt"/>
                             <constraint firstItem="ftQ-qX-Yab" firstAttribute="leading" secondItem="Ysu-1C-l4w" secondAttribute="leading" id="bc6-vx-ag8"/>
                             <constraint firstItem="0Du-eo-mVx" firstAttribute="leading" secondItem="PxE-bb-h4c" secondAttribute="leading" id="cOo-4B-gpI"/>
                             <constraint firstItem="ftQ-qX-Yab" firstAttribute="top" secondItem="FxI-Gj-5WZ" secondAttribute="bottom" id="eB9-g6-oEZ"/>
-                            <constraint firstItem="PxE-bb-h4c" firstAttribute="top" secondItem="88E-Nh-ZaN" secondAttribute="top" id="grq-tt-F6b"/>
+                            <constraint firstItem="Ysu-1C-l4w" firstAttribute="top" secondItem="gYY-IN-Pyz" secondAttribute="top" id="jlC-jS-OsE"/>
                             <constraint firstItem="PxE-bb-h4c" firstAttribute="trailing" secondItem="hKc-OQ-HNz" secondAttribute="trailing" id="kkc-PB-UJY"/>
                             <constraint firstItem="FxI-Gj-5WZ" firstAttribute="top" secondItem="Ysu-1C-l4w" secondAttribute="bottom" id="qHq-0C-VMb"/>
                             <constraint firstItem="hKc-OQ-HNz" firstAttribute="leading" secondItem="PxE-bb-h4c" secondAttribute="leading" id="wrp-cc-XEv"/>
@@ -113,12 +95,9 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Profile" id="lWf-z5-G5N"/>
                     <connections>
-                        <outlet property="addFriendButton" destination="pcQ-lT-M51" id="QJ4-hh-4I2"/>
-                        <outlet property="dismissButton" destination="MQQ-AA-gow" id="3Cj-QV-tHK"/>
                         <outlet property="profileContentCollectionView" destination="hKc-OQ-HNz" id="6sh-3o-cy4"/>
                         <outlet property="profileImage" destination="gYY-IN-Pyz" id="mYO-s2-xOd"/>
                         <outlet property="profileMenuBar" destination="0Du-eo-mVx" id="R5j-RN-QSC"/>
-                        <outlet property="profileNavigationBar" destination="88E-Nh-ZaN" id="LB1-hy-ASH"/>
                         <outlet property="userAttribute" destination="ftQ-qX-Yab" id="3gY-G3-h3Z"/>
                         <outlet property="userName" destination="Ysu-1C-l4w" id="SU2-HR-fMA"/>
                         <outlet property="userRating" destination="FxI-Gj-5WZ" id="kbf-KZ-u5y"/>
@@ -130,8 +109,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="addFriend" width="24" height="24"/>
         <image name="random_1" width="376" height="564"/>
-        <image name="xbutton" width="25" height="25"/>
     </resources>
 </document>
