--- a/Miyu/Feature/Login/LoginViewController.storyboard
+++ b/Miyu/Feature/Login/LoginViewController.storyboard
@@ -18,32 +18,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="eye" translatesAutoresizingMaskIntoConstraints="NO" id="XnC-PV-fhi">
-                                <rect key="frame" x="67" y="62" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="MIYU" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TWE-UU-OrL">
-                                <rect key="frame" x="166" y="224" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="email" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xIa-Ho-I7i" customClass="CustomTextField" customModule="Miyu" customModuleProvider="target">
-                                <rect key="frame" x="30" y="291" width="315" height="30"/>
+                                <rect key="frame" x="60" y="273" width="255" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="password" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="en9-1b-bWq" customClass="CustomTextField" customModule="Miyu" customModuleProvider="target">
-                                <rect key="frame" x="30" y="354" width="315" height="30"/>
+                                <rect key="frame" x="60" y="336" width="255" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="enm-WA-dqP">
-                                <rect key="frame" x="30" y="454" width="315" height="30"/>
+                                <rect key="frame" x="70" y="436" width="235" height="50"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="qLM-O6-2re"/>
+                                </constraints>
                                 <state key="normal" title="Log In">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
@@ -52,34 +44,49 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lu2-y1-JUy">
-                                <rect key="frame" x="30" y="631" width="315" height="30"/>
+                                <rect key="frame" x="30" y="633" width="315" height="28"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <state key="normal" title="Sign Up"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <state key="normal" title="Sign Up">
+                                    <color key="titleColor" red="0.43555678934010156" green="0.43555678934010156" blue="0.43555678934010156" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
                                 <connections>
                                     <action selector="registerTapped:" destination="f8m-N6-2tg" eventType="touchUpInside" id="BfG-8x-hKP"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Loi-sL-pHE">
-                                <rect key="frame" x="126" y="494" width="123" height="30"/>
-                                <state key="normal" title="Forgot password?"/>
+                                <rect key="frame" x="137" y="496" width="101" height="27"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="Forgot password?">
+                                    <color key="titleColor" red="0.56505789974619292" green="0.56505789974619292" blue="0.56505789974619292" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MIYU" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TWE-UU-OrL">
+                                <rect key="frame" x="114.5" y="68" width="145" height="82"/>
+                                <rect key="contentStretch" x="1" y="0.0" width="1" height="1"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-UltraLight" family="Avenir Next" pointSize="60"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="enm-WA-dqP" firstAttribute="leading" secondItem="9z0-Pr-rsN" secondAttribute="leading" constant="30" id="2ea-PS-fqx"/>
-                            <constraint firstItem="9z0-Pr-rsN" firstAttribute="trailing" secondItem="xIa-Ho-I7i" secondAttribute="trailing" constant="30" id="4Zx-Bw-edq"/>
+                            <constraint firstItem="enm-WA-dqP" firstAttribute="leading" secondItem="9z0-Pr-rsN" secondAttribute="leading" constant="70" id="2ea-PS-fqx"/>
+                            <constraint firstItem="9z0-Pr-rsN" firstAttribute="trailing" secondItem="xIa-Ho-I7i" secondAttribute="trailing" constant="60" id="4Zx-Bw-edq"/>
+                            <constraint firstItem="TWE-UU-OrL" firstAttribute="centerX" secondItem="9z0-Pr-rsN" secondAttribute="centerX" id="92A-JS-mji"/>
                             <constraint firstItem="Loi-sL-pHE" firstAttribute="centerX" secondItem="enm-WA-dqP" secondAttribute="centerX" id="B78-MZ-32L"/>
-                            <constraint firstItem="9z0-Pr-rsN" firstAttribute="trailing" secondItem="enm-WA-dqP" secondAttribute="trailing" constant="30" id="Em3-bd-V0n"/>
+                            <constraint firstItem="9z0-Pr-rsN" firstAttribute="trailing" secondItem="enm-WA-dqP" secondAttribute="trailing" constant="70" id="Em3-bd-V0n"/>
                             <constraint firstItem="Loi-sL-pHE" firstAttribute="top" secondItem="enm-WA-dqP" secondAttribute="bottom" constant="10" id="GeC-3J-7Ki"/>
-                            <constraint firstItem="9z0-Pr-rsN" firstAttribute="trailing" secondItem="en9-1b-bWq" secondAttribute="trailing" constant="30" id="JaL-RJ-zrg"/>
-                            <constraint firstItem="en9-1b-bWq" firstAttribute="leading" secondItem="9z0-Pr-rsN" secondAttribute="leading" constant="30" id="RHq-ET-AVR"/>
+                            <constraint firstItem="9z0-Pr-rsN" firstAttribute="trailing" secondItem="en9-1b-bWq" secondAttribute="trailing" constant="60" id="JaL-RJ-zrg"/>
+                            <constraint firstItem="TWE-UU-OrL" firstAttribute="top" secondItem="9z0-Pr-rsN" secondAttribute="top" constant="48" id="MK5-Zc-ya4"/>
+                            <constraint firstItem="en9-1b-bWq" firstAttribute="leading" secondItem="9z0-Pr-rsN" secondAttribute="leading" constant="60" id="RHq-ET-AVR"/>
                             <constraint firstItem="enm-WA-dqP" firstAttribute="top" secondItem="en9-1b-bWq" secondAttribute="bottom" constant="70" id="Tlv-d1-Qmw"/>
                             <constraint firstItem="Lu2-y1-JUy" firstAttribute="centerX" secondItem="9z0-Pr-rsN" secondAttribute="centerX" id="b2R-q9-LGG"/>
                             <constraint firstItem="Lu2-y1-JUy" firstAttribute="top" secondItem="enm-WA-dqP" secondAttribute="bottom" constant="147" id="eaG-Zq-VEa"/>
                             <constraint firstItem="9z0-Pr-rsN" firstAttribute="trailing" secondItem="Lu2-y1-JUy" secondAttribute="trailing" constant="30" id="gbs-jy-FRA"/>
                             <constraint firstItem="Lu2-y1-JUy" firstAttribute="leading" secondItem="9z0-Pr-rsN" secondAttribute="leading" constant="30" id="m3J-9a-NE2"/>
                             <constraint firstItem="9z0-Pr-rsN" firstAttribute="bottom" secondItem="Lu2-y1-JUy" secondAttribute="bottom" constant="6" id="pg2-sT-zpe"/>
-                            <constraint firstItem="xIa-Ho-I7i" firstAttribute="leading" secondItem="9z0-Pr-rsN" secondAttribute="leading" constant="30" id="ts3-G7-utQ"/>
+                            <constraint firstItem="xIa-Ho-I7i" firstAttribute="leading" secondItem="9z0-Pr-rsN" secondAttribute="leading" constant="60" id="ts3-G7-utQ"/>
                             <constraint firstItem="en9-1b-bWq" firstAttribute="top" secondItem="xIa-Ho-I7i" secondAttribute="bottom" constant="33" id="v8X-2B-QRg"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="9z0-Pr-rsN"/>
@@ -95,7 +102,4 @@
             <point key="canvasLocation" x="1040.8" y="55.322338830584712"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="eye" width="200" height="200"/>
-    </resources>
 </document>
