--- a/Miyu/Feature/Homepage/HomepageViewController.storyboard
+++ b/Miyu/Feature/Homepage/HomepageViewController.storyboard
@@ -37,7 +37,8 @@
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="0.85252730139704891" green="1" blue="0.73520657969411896" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="dYD-l5-zH8" firstAttribute="top" secondItem="229-3b-bvJ" secondAttribute="bottom" constant="-554" id="Wnf-zd-ade"/>
                             <constraint firstItem="dYD-l5-zH8" firstAttribute="leading" secondItem="229-3b-bvJ" secondAttribute="leading" id="awC-4U-NkX"/>
